# FeedbackHub

./: .env.example  .gitignore  Caddyfile  README.md  dev.sh  docker-compose.cf-tunnel.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: Cargo.toml  Dockerfile  TESTING.md  tarpaulin-report.html
backend/migrations/: 20260302000000_initial_schema.sql  20260302000001_create_extensions.sql  20260302000003_create_projects_table.sql  20260302000004_create_feedbacks_table.sql  20260302000005_create_end_users_table.sql  20260321000001_create_feedback_threads_tables.sql  20260321000002_add_projects_description.sql  20260322000001_add_internal_notes_assignee_spam.sql  20260322000002_add_thread_views_table.sql  20260322000003_create_apps_table.sql  20260322000004_add_message_attachments.sql  20260322000005_create_api_keys_table.sql  20260322000006_create_notification_preferences_table.sql  20260322000007_add_reporters_fk_and_backfill.sql  20260323000001_add_deleted_at_column.sql  20260323000002_create_webhooks_table.sql  20260323000003_add_app_id_to_feedback_threads.sql  20260323000005_create_tags_table.sql  20260323000006_add_reference_number.sql  20260323000007_create_audit_logs_table.sql  20260323000008_add_follow_up_due_at.sql  20260323000009_create_response_templates_table.sql  20260323000010_create_team_members_table.sql  20260512000001_create_analytics_events.sql  20260512000002_add_sort_order_to_response_templates.sql
backend/src/: audit.rs  db.rs  email.rs  lib.rs  main.rs  webhook.rs
backend/src/model/: analytics.rs  feedback.rs  mod.rs  thread.rs
backend/src/routes/: analytics.rs  apps.rs  developer.rs  feedback.rs  mod.rs  project.rs  tags.rs  threads.rs
backend/tests/: db_schema_test.rs  threads_schema_test.rs
docs/: local-preview.md  scaffold.md
flutter_sdk/feedback_hub_flutter/: .gitignore  analysis_options.yaml  (+1 more)
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+76 files in other folders)
