[package]
name = "feedback-system-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.145"
tower = { version = "0.5.2", features = ["util"] }
