[package]
name = "feedback-system-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
sha2 = "0.10.9"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
